<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/form_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ActivityForm"
        android:backgroundTint="@color/background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:id="@+id/form_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/text_padding"
        android:layout_marginTop="@dimen/text_padding"
        android:text="@string/form_instructions"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_marginTop="@dimen/text_padding"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:digits="@string/name_digits"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/editText_email"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_padding"
            android:hint="@string/enter_email"
            android:digits="@string/email_username_digits"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/editText_username"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_padding"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:digits="@string/email_username_digits"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/editText_occupation"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_padding"
            android:hint="@string/enter_occupation"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/editText_bio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_padding"

            android:inputType="textMultiLine"
            android:hint="@string/enter_bio"
            />

        <RelativeLayout

            android:layout_height="wrap_content"
            android:layout_width="fill_parent">

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>

            <Button
                android:id="@+id/button_date"
                android:layout_width="@dimen/form_button_width"
                android:layout_height="@dimen/form_button_height"
                android:backgroundTint="@color/colorAccent"
                android:layout_toEndOf="@id/date_picker"
                android:layout_marginTop="@dimen/temp_padding"
                android:text="@string/select_date"
                android:onClick="onDateClick"/>

            <EditText
                android:id="@+id/editText_date"
                android:layout_width="@dimen/form_button_width"
                android:textSize="@dimen/font_size_std"
                android:layout_below="@id/button_date"
                android:layout_toEndOf="@id/date_picker"
                android:layout_alignBottom="@id/date_picker"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/date_of_birth"
                 />

        </RelativeLayout>

        <Button
            android:id="@+id/button_submit_form"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:padding="@dimen/submit_button_padding"
            android:layout_marginTop="@dimen/text_padding"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:onClick="submitForm"
            android:layout_width="fill_parent">
        </Button>


    </LinearLayout>
</ScrollView>